--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         }
         
         .status-paid {
-            background-color: #dcfce7;
-            color: #166534;
+            background-color: #d1fae5;
+            color: #065f46;
         }
         
         .status-pending {
@@ -161,8 +161,8 @@
         }
 
         .status-abono {
-            background-color: #ccfbf1;
-            color: #115e59;
+            background-color: #cffafe;
+            color: #155e75;
         }
 
         .status-saldo {
@@ -195,8 +195,8 @@
         }
 
         html.dark-mode .status-paid {
-            background-color: #064e3b;
-            color: #86efac;
+            background-color: #14532d;
+            color: #bbf7d0;
         }
 
         html.dark-mode .status-pending {
@@ -216,8 +216,8 @@
         }
 
         html.dark-mode .status-abono {
-            background-color: #134e4a;
-            color: #99f6e4;
+            background-color: #083344;
+            color: #a5f3fc;
         }
 
         html.dark-mode .status-saldo {
@@ -825,7 +825,7 @@
                     <option value="dispatch">Despacho</option>
                     <option value="abono">Abono</option>
                     <option value="saldo_actual">Sado actual</option>
-                    <option value="paid">Pagadas</option>
+                    <option value="paid">Pagada</option>
                     <option value="pending">Pendientes</option>
                     <option value="late">Vencidas</option>
                 </select>
@@ -893,7 +893,7 @@
                                 <option value="dispatch">Despacho</option>
                                 <option value="abono">Abono</option>
                                 <option value="saldo_actual">Sado actual</option>
-                                <option value="paid">Pagadas</option>
+                                <option value="paid">Pagada</option>
                                 <option value="pending">Pendientes</option>
                                 <option value="late">Vencidas</option>
                             </select>
@@ -1867,9 +1867,9 @@
                 'saldo_actual': 'Sado actual',
                 'saldo actual': 'Sado actual',
                 'sado actual': 'Sado actual',
-                'paid': 'Pagadas',
-                'pagada': 'Pagadas',
-                'pagadas': 'Pagadas',
+                'paid': 'Pagada',
+                'pagada': 'Pagada',
+                'pagadas': 'Pagada',
                 'pending': 'Pendientes',
                 'pendiente': 'Pendientes',
                 'pendientes': 'Pendientes',
@@ -1892,7 +1892,7 @@
                 return { text: 'Sado actual', background: '#ede9fe', color: '#5b21b6' };
             }
             if (normalized === 'paid' || normalized === 'pagada' || normalized === 'pagadas') {
-                return { text: 'Pagadas', background: '#dcfce7', color: '#166534' };
+                return { text: 'Pagada', background: '#d1fae5', color: '#065f46' };
             }
             if (normalized === 'late' || normalized === 'vencida' || normalized === 'vencidas') {
                 return { text: 'Vencidas', background: '#fee2e2', color: '#991b1b' };
