--- a/index.html
+++ b/index.html
@@ -824,10 +824,10 @@
                     <option value="all">Todas las facturas</option>
                     <option value="dispatch">Despacho</option>
                     <option value="abono">Abono</option>
-                    <option value="saldo_actual">Sado actual</option>
+                    <option value="saldo_actual">Saldo Actual</option>
                     <option value="paid">Pagada</option>
-                    <option value="pending">Pendientes</option>
-                    <option value="late">Vencidas</option>
+                    <option value="pending">Pendiente</option>
+                    <option value="late">Vencida</option>
                 </select>
             </div>
 
@@ -892,10 +892,10 @@
                             <select id="estado" class="w-full px-3 py-2 border-2 rounded-md text-sm focus:outline-none bg-white cursor-pointer font-semibold" style="border-color: #f97316; color: #ffffff;">
                                 <option value="dispatch">Despacho</option>
                                 <option value="abono">Abono</option>
-                                <option value="saldo_actual">Sado actual</option>
+                                <option value="saldo_actual">Saldo Actual</option>
                                 <option value="paid">Pagada</option>
-                                <option value="pending">Pendientes</option>
-                                <option value="late">Vencidas</option>
+                                <option value="pending">Pendiente</option>
+                                <option value="late">Vencida</option>
                             </select>
                         </div>
                     </div>
@@ -1872,18 +1872,18 @@
                 'dispatch': 'Despacho',
                 'despacho': 'Despacho',
                 'abono': 'Abono',
-                'saldo_actual': 'Sado actual',
-                'saldo actual': 'Sado actual',
-                'sado actual': 'Sado actual',
+                'saldo_actual': 'Saldo Actual',
+                'saldo actual': 'Saldo Actual',
+                'sado actual': 'Saldo Actual',
                 'paid': 'Pagada',
                 'pagada': 'Pagada',
                 'pagadas': 'Pagada',
-                'pending': 'Pendientes',
-                'pendiente': 'Pendientes',
-                'pendientes': 'Pendientes',
-                'late': 'Vencidas',
-                'vencida': 'Vencidas',
-                'vencidas': 'Vencidas'
+                'pending': 'Pendiente',
+                'pendiente': 'Pendiente',
+                'pendientes': 'Pendiente',
+                'late': 'Vencida',
+                'vencida': 'Vencida',
+                'vencidas': 'Vencida'
             };
             return statusMap[String(status || '').toLowerCase()] || status;
         }
@@ -1897,21 +1897,22 @@
                 return { text: 'Abono', background: '#dcfce7', color: '#166534' };
             }
             if (normalized === 'saldo_actual' || normalized === 'saldo actual' || normalized === 'sado actual') {
-                return { text: 'Sado actual', background: '#ede9fe', color: '#5b21b6' };
+                return { text: 'Saldo Actual', background: '#ede9fe', color: '#5b21b6' };
             }
             if (normalized === 'paid' || normalized === 'pagada' || normalized === 'pagadas') {
                 return { text: 'Pagada', background: '#d1fae5', color: '#065f46' };
             }
             if (normalized === 'late' || normalized === 'vencida' || normalized === 'vencidas') {
-                return { text: 'Vencidas', background: '#fee2e2', color: '#991b1b' };
+                return { text: 'Vencida', background: '#fee2e2', color: '#991b1b' };
             }
-            return { text: 'Pendientes', background: '#fef3c7', color: '#92400e' };
+            return { text: 'Pendiente', background: '#fef3c7', color: '#92400e' };
         }
 
         function viewInvoice(id) {
             const inv = invoices.find(i => i.id === id);
             if (!inv) return;
             const canViewAmount = canSeeInvoiceAmount(inv);
+            const addressText = canViewAmount ? (inv.address || 'N/A') : 'Oculta';
 
             let itemsHtml = '<table class="w-full text-sm border-collapse"><tr class="border-b"><th class="text-left p-2">Cant.</th><th class="text-left p-2">Descripción</th><th class="text-left p-2">Precio</th><th class="text-right p-2">Total</th></tr>';
             
@@ -1932,7 +1933,7 @@
                     <div class="text-left" style="max-height: 400px; overflow-y: auto; color: var(--text-primary);">
                         <div style="margin-bottom: 15px;">
                             <p><strong>Cliente:</strong> ${inv.client}</p>
-                            <p><strong>Dirección:</strong> ${inv.address || 'N/A'}</p>
+                            <p><strong>Dirección:</strong> ${addressText}</p>
                             <p><strong>Fecha:</strong> ${inv.date}</p>
                             <p><strong>Estado:</strong> ${getStatusText(inv.status)}</p>
                         </div>
