--- a/admin.html
+++ b/admin.html
@@ -785,15 +785,15 @@
             const { value: formValues } = await Swal.fire({
                 title: `Editar ${target.email}`,
                 html:
-                    `<div class="edit-user-form">`+
-                    `<p style="color: #6b7280; font-size: 0.875rem; margin-bottom: 1rem;">Las contraseñas se gestionan mediante Firebase Authentication. Los usuarios pueden cambiarlas desde su perfil.</p>`+
-                    `<div style="margin-bottom: 1rem;">`+
-                    `<label class="edit-user-label" for="swal-role">Rol del usuario</label>`+
-                    `<select id="swal-role" class="swal2-select edit-user-field"><option value="user">Usuario</option><option value="admin">Administrador</option></select>`+
+                    `<div class="edit-user-form" style="text-align: left;">`+
+                    `<p style="color: #9ca3af; font-size: 0.85rem; margin-bottom: 1.25rem; line-height: 1.4;">Las contraseñas se gestionan mediante Firebase Authentication. Los usuarios pueden cambiarlas desde su perfil.</p>`+
+                    `<div style="margin-bottom: 1.25rem;">`+
+                    `<label style="display:block; font-size: 0.85rem; font-weight: 600; color: #e5e7eb; margin-bottom: 0.5rem; text-transform: uppercase; letter-spacing: 0.5px;">Rol del usuario</label>`+
+                    `<select id="swal-role" style="width: 100%; padding: 0.625rem 0.75rem; background-color: #1e293b; color: #e5e7eb; border: 1px solid #475569; border-radius: 0.375rem; font-size: 0.875rem; font-family: 'Inter', sans-serif; transition: border-color 0.2s; cursor: pointer;"><option value="user">Usuario</option><option value="admin">Administrador</option></select>`+
                     `</div>`+
                     `<div style="margin-bottom: 0.5rem;">`+
-                    `<label class="edit-user-label" for="swal-description" style="display:block; margin-bottom:0.5rem;">Descripción</label>`+
-                    `<textarea id="swal-description" class="swal2-input" style="resize:vertical; min-height:80px; font-family:'Inter',sans-serif; font-size:0.875rem; padding:0.5rem;" placeholder="Agrega notas sobre este usuario (proyectos, empresa, etc.)"></textarea>`+
+                    `<label style="display:block; font-size: 0.85rem; font-weight: 600; color: #e5e7eb; margin-bottom: 0.5rem; text-transform: uppercase; letter-spacing: 0.5px;">Descripción</label>`+
+                    `<textarea id="swal-description" style="width: 100%; padding: 0.625rem 0.75rem; background-color: #1e293b; color: #e5e7eb; border: 1px solid #475569; border-radius: 0.375rem; font-size: 0.875rem; font-family: 'Inter', sans-serif; resize: vertical; min-height: 90px; transition: border-color 0.2s; box-sizing: border-box;" placeholder="Agrega notas sobre este usuario (proyectos, empresa, contacto, etc.)"></textarea>`+
                     `</div>`+
                     `</div>`,
                 focusConfirm: false,
