--- a/login.html
+++ b/login.html
@@ -65,7 +65,47 @@
             background-color: var(--bg-primary) !important;
             color: var(--text-primary);
             transition: background-color 0.25s ease, color 0.25s ease;
-            background-image: radial-gradient(1200px 600px at 20% -20%, rgba(37,99,235,0.12), transparent 55%), radial-gradient(900px 500px at 100% 120%, rgba(14,165,233,0.10), transparent 50%);
+            background: linear-gradient(-45deg, #0f172a, #1e293b, #0f172a, #1e293b);
+            background-size: 400% 400%;
+            animation: gradientShift 15s ease infinite;
+            filter: brightness(1.05);
+            position: relative;
+        }
+
+        @keyframes gradientShift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            inset: 0;
+            background: 
+                radial-gradient(800px 600px at 20% 10%, rgba(37, 99, 235, 0.15), transparent 50%),
+                radial-gradient(600px 700px at 80% 90%, rgba(14, 165, 233, 0.12), transparent 50%),
+                radial-gradient(900px 500px at 50% 50%, rgba(59, 130, 246, 0.08), transparent 60%);
+            animation: orbsFloat 20s ease-in-out infinite;
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        @keyframes orbsFloat {
+            0%, 100% { 
+                background-position: 0% 0%, 100% 0%, 50% 0%;
+                filter: blur(40px);
+            }
+            50% { 
+                background-position: 100% 100%, 0% 100%, 50% 100%;
+                filter: blur(50px);
+            }
+        }
+
+        html.dark-mode body {
+            background: linear-gradient(-45deg, #0f172a, #1e293b, #0f172a, #1e293b);
+            background-size: 400% 400%;
+            animation: gradientShift 15s ease infinite;
         }
 
         .login-card {
@@ -166,6 +206,11 @@
             display: none;
         }
 
+        main {
+            position: relative;
+            z-index: 10;
+        }
+
         @keyframes appSpin {
             to { transform: rotate(360deg); }
         }
@@ -211,7 +256,8 @@
             <div class="app-loading-text">Cargando...</div>
         </div>
     </div>
-    <div class="w-full max-w-md bg-white p-8 rounded-lg shadow login-card">
+    <main class="w-full min-h-screen flex items-center justify-center">
+        <div class="w-full max-w-md bg-white p-8 rounded-lg shadow login-card">
         <div class="flex flex-col items-center mb-5">
             <div class="login-brand mb-3">$</div>
             <h1 class="text-4xl font-bold mb-2 text-center">Iniciar sesión</h1>
@@ -235,7 +281,8 @@
                 </button>
             </div>
         </form>
-    </div>
+        </div>
+    </main>
 
     <script>
         function initDarkMode() {
