--- a/index.html
+++ b/index.html
@@ -673,37 +673,60 @@
             }
 
             #invoiceFormView table {
-                min-width: 100%;
-                table-layout: fixed;
+                width: 100%;
+                border-collapse: collapse;
             }
 
             #invoiceFormView thead {
                 display: none;
             }
 
+            #invoiceFormView tbody {
+                display: block;
+            }
+
             #invoiceFormView tbody tr {
-                display: grid;
-                grid-template-columns: repeat(2, minmax(0, 1fr));
-                gap: 10px;
-                padding: 12px 8px;
-                border-bottom: 1px solid var(--border-color);
+                display: block;
+                padding: 12px;
+                margin-bottom: 8px;
+                border: 1px solid var(--border-color);
+                border-radius: 4px;
+                background-color: var(--bg-secondary);
             }
 
             #invoiceFormView tbody td {
-                padding: 0;
-            }
-
-            #invoiceFormView tbody td:nth-child(2) {
-                grid-column: 1 / -1;
-            }
-
-            #invoiceFormView tbody td:nth-child(4) {
+                display: block;
+                padding: 8px 0;
+                border: none;
                 text-align: left;
             }
 
-            #invoiceFormView tbody td:nth-child(5) {
-                grid-column: 1 / -1;
-                text-align: left;
+            #invoiceFormView tbody td::before {
+                display: block;
+                font-size: 11px;
+                font-weight: 600;
+                text-transform: uppercase;
+                letter-spacing: 0.04em;
+                color: var(--text-secondary);
+                margin-bottom: 4px;
+                content: attr(data-label);
+            }
+
+            #invoiceFormView tbody td.remove-cell {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: flex-start;
+                padding-top: 12px;
+                padding-bottom: 0;
+                border-top: 1px solid var(--border-color);
+                margin-top: 8px;
+            }
+
+            #invoiceFormView tbody td.remove-cell::before {
+                content: "";
+                display: none;
+                margin-bottom: 0;
             }
 
             #invoiceFormView .removeItemBtn {
@@ -714,31 +737,31 @@
                 align-items: center;
                 justify-content: center;
                 border: 1px solid var(--border-color);
-                border-radius: 8px;
+                border-radius: 4px;
+                background-color: var(--bg-primary);
+                color: var(--text-primary);
+                cursor: pointer;
+                font-size: 13px;
+                transition: all 0.2s;
+            }
+
+            #invoiceFormView .removeItemBtn:hover {
+                background-color: var(--bg-hover);
             }
 
             #invoiceFormView .remove-label {
                 display: inline;
-                font-size: 12px;
+                font-size: 13px;
                 margin-left: 6px;
             }
 
-            #invoiceFormView tbody td::before {
-                content: attr(data-label);
-                display: block;
-                font-size: 10px;
-                text-transform: uppercase;
-                letter-spacing: 0.04em;
-                color: var(--text-secondary);
-                margin-bottom: 4px;
-            }
-
-            #invoiceFormView tbody td.remove-cell::before {
-                content: "Accion";
-            }
-
             #invoiceFormView .item-desc-area {
-                min-height: 64px;
+                min-height: 60px;
+            }
+
+            #invoiceFormView tbody td input,
+            #invoiceFormView tbody td textarea {
+                width: 100%;
             }
         }
 
@@ -761,6 +784,15 @@
                 font-size: 0.85rem;
                 padding-left: 10px;
                 padding-right: 10px;
+            }
+
+            #invoiceFormView tbody tr {
+                padding: 10px;
+                margin-bottom: 6px;
+            }
+
+            #invoiceFormView tbody td {
+                padding: 6px 0;
             }
 
             .invoice-card {
