fix de texto color blanco en los estados

--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
                         </div>
                         <div>
                             <label class="block text-xs font-bold text-orange-500 uppercase mb-1.5 tracking-wider" style="color: #f97316; letter-spacing: 0.05em;">Estado</label>
-                            <select id="estado" class="w-full px-3 py-2 border-2 rounded-md text-sm focus:outline-none bg-white cursor-pointer font-semibold" style="border-color: #f97316; color: #ffffff;">
+                            <select id="estado" class="w-full px-3 py-2 border-2 rounded-md text-sm focus:outline-none bg-white cursor-pointer font-semibold" style="border-color: #f97316; color: var(--text-primary); background-color: var(--input-bg);">
                                 <option value="dispatch">Despacho</option>
                                 <option value="abono">Abono</option>
                                 <option value="saldo_actual">Saldo Actual</option>
