--- a/index.html
+++ b/index.html
@@ -1961,8 +1961,8 @@
             
             itemsHtml += '</table>';
             const totalHtml = canViewAmount
-                ? `<strong>Total: $${inv.amount.toFixed(2)}</strong>`
-                : '<strong>Total: Oculto</strong>';
+                ? `<div style="display: inline-flex; align-items: center; gap: 10px; padding: 8px 14px; border-radius: 10px; background-color: var(--bg-primary); border: 1px solid var(--border-color); box-shadow: 0 2px 8px rgba(0, 0, 0, 0.12);"><span style="font-size: 12px; font-weight: 700; letter-spacing: 0.06em; text-transform: uppercase; color: var(--text-secondary);">Total</span><span style="font-size: 30px; line-height: 1; font-weight: 800; color: var(--text-primary);">$${inv.amount.toFixed(2)}</span></div>`
+                : '<div style="display: inline-flex; align-items: center; gap: 10px; padding: 8px 14px; border-radius: 10px; background-color: var(--bg-primary); border: 1px solid var(--border-color);"><span style="font-size: 12px; font-weight: 700; letter-spacing: 0.06em; text-transform: uppercase; color: var(--text-secondary);">Total</span><span style="font-size: 24px; line-height: 1; font-weight: 800; color: var(--text-primary);">Oculto</span></div>';
 
             Swal.fire({
                 title: `Factura #${inv.number}`,
@@ -1977,7 +1977,7 @@
                         <div style="margin-bottom: 15px; border-top: 1px solid var(--border-color); padding-top: 10px;">
                             ${itemsHtml}
                         </div>
-                        <div style="text-align: right; border-top: 2px solid var(--border-color); padding-top: 10px; font-size: 18px; font-weight: bold;">
+                        <div style="text-align: right; border-top: 2px solid var(--border-color); padding-top: 14px;">
                             ${totalHtml}
                         </div>
                     </div>
