--- a/index.html
+++ b/index.html
@@ -1290,9 +1290,15 @@
                 </html>
             `;
 
-            previewWindow.document.open();
-            previewWindow.document.write(html);
-            previewWindow.document.close();
+            try {
+                const encodedHtml = `data:text/html;charset=utf-8,${encodeURIComponent(html)}`;
+                previewWindow.location.replace(encodedHtml);
+            } catch (error) {
+                previewWindow.document.open();
+                previewWindow.document.write(html);
+                previewWindow.document.close();
+                console.error('Error mostrando previsualizacion:', error);
+            }
         }
 
         function viewInvoice(id) {
