--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/app.css">
     <script src="js/app-utils.js"></script>
+    <script src="js/ui-utils.js"></script>
     
     <!-- Firebase SDK -->
     <script type="module">
