--- a/index.html
+++ b/index.html
@@ -1242,39 +1242,43 @@
                     <link rel="stylesheet" href="css/app.css">
                 </head>
                 <body class="pdf-preview">
+                    <div class="pdf-shell">
                     <div class="pdf-actions">
-                        <button class="pdf-action-btn" onclick="window.print()">Imprimir</button>
-                        <button class="pdf-action-btn" onclick="window.close()">Cerrar</button>
+                        <button class="pdf-action-btn pdf-action-print" onclick="window.print()">Imprimir</button>
+                        <button class="pdf-action-btn pdf-action-close" onclick="window.close()">Cerrar</button>
                     </div>
-                    <div class="pdf-header">
-                        <h1>Factura #${inv.number}</h1>
-                    </div>
-                    <div class="pdf-meta">
-                        <div><strong>Cliente:</strong> ${inv.client}</div>
-                        <div><strong>Dirección:</strong> ${addressText}</div>
-                        <div><strong>Fecha:</strong> ${inv.date}</div>
-                        <div><strong>Estado:</strong> <span class="pdf-chip ${statusClass}">${statusText}</span></div>
-                    </div>
-                    <div class="pdf-table-wrap">
-                        <table class="pdf-table">
-                            <thead>
-                                <tr>
-                                    <th class="pdf-col-qty">Cant.</th>
-                                    <th>Descripción</th>
-                                    <th class="pdf-col-price pdf-cell-right">Precio</th>
-                                    <th class="pdf-col-total pdf-cell-right">Total</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                ${itemsRows}
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="pdf-total">
-                        <div class="pdf-total-box">
-                            <span class="pdf-total-label">Total</span>
-                            <span class="pdf-total-value">${totalText}</span>
+                    <div class="pdf-card">
+                        <div class="pdf-header">
+                            <h1>Factura #${inv.number}</h1>
                         </div>
+                        <div class="pdf-meta">
+                            <div><strong>Cliente:</strong> ${inv.client}</div>
+                            <div><strong>Dirección:</strong> ${addressText}</div>
+                            <div><strong>Fecha:</strong> ${inv.date}</div>
+                            <div><strong>Estado:</strong> <span class="pdf-chip ${statusClass}">${statusText}</span></div>
+                        </div>
+                        <div class="pdf-table-wrap">
+                            <table class="pdf-table">
+                                <thead>
+                                    <tr>
+                                        <th class="pdf-col-qty">Cant.</th>
+                                        <th>Descripción</th>
+                                        <th class="pdf-col-price pdf-cell-right">Precio</th>
+                                        <th class="pdf-col-total pdf-cell-right">Total</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    ${itemsRows}
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="pdf-total">
+                            <div class="pdf-total-box">
+                                <span class="pdf-total-label">Total</span>
+                                <span class="pdf-total-value">${totalText}</span>
+                            </div>
+                        </div>
+                    </div>
                     </div>
                 </body>
                 </html>
