--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
         }
 
         function renderInvoiceCard(inv, canDelete, withTitle = false) {
-            const statusChip = getStatusPdfChipData(inv.status);
+            const statusClass = getStatusClass(inv.status);
             const statusText = getStatusText(inv.status);
             const canViewAmount = canSeeInvoiceAmount(inv);
             const amountText = canViewAmount ? `$${inv.amount.toFixed(2)}` : 'Monto oculto';
