fix modo oscruo login
Dejé login siempre en oscuro, y index/admin respetando preferencia guardada (con admin alineado a index) en login.html y admin.html.

--- a/admin.html
+++ b/admin.html
@@ -509,7 +509,7 @@
 
         // Set current user email in navbar
         document.addEventListener('DOMContentLoaded', async function(){
-            initDarkMode({ respectSystem: false });
+            initDarkMode({ respectSystem: true });
             const cur = JSON.parse(localStorage.getItem('currentUser')||'null');
             const el = document.getElementById('currentUserEmail'); if (el && cur) el.textContent = cur.email;
             await render();
