Fix para editar fecha de facturas

--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
                     <div class="grid grid-cols-4 gap-4 mb-6">
                         <div>
                             <label class="block text-xs font-semibold text-gray-700 uppercase mb-1.5">Día</label>
-                            <input type="number" id="dia" min="1" max="31" class="w-full px-3 py-2 border border-gray-200 rounded-md text-sm focus:outline-none focus:border-gray-900 transition-colors" placeholder="19" readonly>
+                            <input type="number" id="dia" min="1" max="31" class="w-full px-3 py-2 border border-gray-200 rounded-md text-sm focus:outline-none focus:border-gray-900 transition-colors" placeholder="19">
                         </div>
                         <div>
                             <label class="block text-xs font-semibold text-gray-700 uppercase mb-1.5">Mes</label>
-                            <input type="number" id="mes" min="1" max="12" class="w-full px-3 py-2 border border-gray-200 rounded-md text-sm focus:outline-none focus:border-gray-900 transition-colors" placeholder="2" readonly>
+                            <input type="number" id="mes" min="1" max="12" class="w-full px-3 py-2 border border-gray-200 rounded-md text-sm focus:outline-none focus:border-gray-900 transition-colors" placeholder="2">
                         </div>
                         <div>
                             <label class="block text-xs font-semibold text-gray-700 uppercase mb-1.5">Año</label>
-                            <input type="number" id="anio" min="2020" max="2100" class="w-full px-3 py-2 border border-gray-200 rounded-md text-sm focus:outline-none focus:border-gray-900 transition-colors" placeholder="2026" readonly>
+                            <input type="number" id="anio" min="2020" max="2100" class="w-full px-3 py-2 border border-gray-200 rounded-md text-sm focus:outline-none focus:border-gray-900 transition-colors" placeholder="2026">
                         </div>
                         <div>
                             <label class="block text-xs font-semibold text-gray-700 uppercase mb-1.5">N°</label>
